# vRISC-16

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt  vrasm.py  vrctl.py
include/: cobs.h  ioctl.h  vrvm.h
scripts/: vrasm.py  vrctl.py
src/: CMakeLists.txt  cobs.c  ioctl.c  vrvm.c
